// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots channels/ChannelList Full List 1`] = `
<div
  id="root"
>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiBox-root MuiBox-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1"
          >
            Channels
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div>
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="modal-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-root MuiSvgIcon-fontSizeLarge"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root WithStyles(ForwardRef(Paper))-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <ul
        class="MuiList-root makeStyles-root MuiList-dense MuiList-padding MuiList-subheader"
      >
        <li
          class="MuiListSubheader-root MuiListSubheader-gutters"
        >
          AMD64
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  a
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      alpha
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      2261.0.0
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                            focusable="false"
                            title="Release date"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                            />
                            <path
                              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          09/13/2019
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-8"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  b
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      beta
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      2247.2.0
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                            focusable="false"
                            title="Release date"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                            />
                            <path
                              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          09/13/2019
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-9"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  e
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      edge
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      2247.99.0
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                            focusable="false"
                            title="Release date"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                            />
                            <path
                              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          09/05/2019
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-10"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  s
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      stable
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      2191.5.0
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                            focusable="false"
                            title="Release date"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                            />
                            <path
                              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root MuiBox-root"
                        >
                          09/05/2019
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-11"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="MuiList-root makeStyles-root MuiList-dense MuiList-padding MuiList-subheader"
      >
        <li
          class="MuiListSubheader-root MuiListSubheader-gutters"
        >
          ARM64
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  a
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      alpha
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      No package
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-12"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  b
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      beta
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      No package
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-13"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  e
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      edge
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      No package
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-14"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-secondaryAction"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                >
                  s
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiListItemText-root makeStyles-root MuiListItemText-dense MuiListItemText-multiline"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      stable
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      No package
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div>
              <button
                aria-controls="simple-menu-15"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelList Loading 1`] = `
<div
  id="root"
>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiBox-root MuiBox-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1"
          >
            Channels
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div>
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="modal-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-root MuiSvgIcon-fontSizeLarge"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root WithStyles(ForwardRef(Paper))-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root makeStyles-loaderContainer"
        data-testid="loader-container"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
